chore: build the InTestArguments record using a builder pattern to improve readability